# reqcluster

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  ReqCluster_PRD.docx  USER.md  docker-compose.yml  main.py  metrics.md  napkin_pipeline_prompt.md  nginx.conf  pitch_deck_script.md  prd.md  prd_extract.py  pyproject.toml  run-gpu.ps1  run-gpu.sh  start.sh
backend/: main.py  requirements.txt
data/: README.md  aerospace_requirements.csv  contradiction_boundary_audit_requirements.csv  generate_aerospace_dataset.py  generate_audit_datasets.py  generate_uav_fms.py  generate_uav_fms_2k.py  promise_requirements.csv  sample_requirements.csv  uav_fms_10k_requirements.csv  uav_fms_2k_requirements.csv  uav_fms_35k_requirements.csv  uav_fms_phase2_audit_requirements.csv  uav_fms_stress_600_requirements.csv
docs/: ARCHITECTURE.md  DEPENDENCY_TREE_UI.md  DEPLOYMENT_ROADMAP.md  DP5_DEPENDENCY_TREE.md  PHASE2_EMBEDDINGS.md  PHASE2_ENRICHMENT_API_DB.md  PHASE2_FRONTEND_ENRICHMENT_UI.md  PHASE2_LLM_ENRICHMENT.md  PHASE3_CLUSTER_REFINEMENT.md  PHASE4_HUMAN_IN_THE_LOOP.md  PHASE5_ACTIVE_LEARNING.md  PHASE5_MBSE_EXPORT.md  ReqCluster_Honeywell_Hackathon.pptx  SCALABILITY_ROADMAP.md  build_deck.py  changes.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
scripts/: benchmark_embeddings.py
stress-results/: stress_600_20260606-114708.json  stress_600_20260606-114708.md  stress_600_20260606-115801.json  stress_600_20260606-115801.md
tests/: conftest.py  (+22 more)
(+83 files in other folders)
